# components

./: LICENSE  README.md  SKILL.md
rs/blitzortung/: Cargo.toml  README.md  component.wit
rs/blitzortung/src/: lib.rs
rs/bom/: Cargo.toml  README.md  component.wit
rs/bom/src/: lib.rs
rs/cli/: Cargo.toml  README.md  cli.wit  component.wit  fs.wit
rs/cli/src/: awk.rs  cat.rs  cp.rs  cut.rs  diff.rs  find.rs  fs_ops.rs  grep.rs  head.rs  jq.rs  lib.rs  ls.rs  mkdir.rs  mv.rs  rm.rs  sed.rs  sort.rs  stat.rs  tail.rs  tee.rs  touch.rs  tr.rs  tree.rs  uniq.rs  wc.rs
rs/discord/: Cargo.toml  README.md  component.wit
rs/discord-message-listener/: Cargo.toml  README.md  component.wit
rs/discord-message-listener/src/: bindings.rs  lib.rs
rs/discord/src/: api.rs  bindings.rs  lib.rs
rs/discord/src/listener/: gateway_opcode.rs  mod.rs
rs/excel/: Cargo.toml  component.wit
rs/excel/src/: excel.rs  lib.rs
rs/firecrawl/: Cargo.toml  README.md  component.wit
rs/firecrawl/src/: bindings.rs  lib.rs  scrape.rs  search.rs
rs/fs/: Cargo.toml  README.md  component.wit
rs/fs-local/: Cargo.toml  README.md  component.wit
rs/fs-local/src/: lib.rs
rs/fs-test/: Cargo.toml  README.md  component.wit
rs/fs-test/src/: bindings.rs  lib.rs
rs/fs/src/: lib.rs
rs/lightning-notifier/: Cargo.toml  README.md  component.wit
rs/lightning-notifier/src/: lib.rs  llm.rs  notify.rs  state.rs
rs/llm/: Cargo.toml  README.md  component.wit
rs/llm/src/: anthropic.rs  bindings.rs  deepseek.rs  fireworks.rs  google.rs  groq.rs  lib.rs  mistral.rs  openai.rs  openrouter.rs  perplexity.rs  together.rs  venice.rs  xai.rs
rs/llm/src/utils/: exp_backoff.rs  mod.rs
rs/mcp-server/: Cargo.toml  component.wit
rs/mcp-server/src/: auth.rs  lib.rs  mcp.rs
rs/s3/: Cargo.toml  README.md  component.wit
rs/s3/src/: config.rs  lib.rs  s3.rs  sigv4.rs
rs/steel/: Cargo.toml  README.md  component.wit
rs/steel/src/: api.rs  lib.rs
rs/telegram/: Cargo.toml  README.md  build.rs  component.wit
rs/telegram/src/: api.rs  api_impl.rs  lib.rs  webhook.rs
rs/twilio/: Cargo.toml  README.md  component.wit
rs/twilio/src/: api.rs  lib.rs  webhook.rs
rs/whatsapp/: Cargo.toml  README.md  component.wit
rs/whatsapp/src/: api.rs  lib.rs  webhook.rs
rs/word/: Cargo.toml  component.wit
rs/word/src/: docx.rs  lib.rs
