[package]
name = "cli"
# Note that this version does not matter for the component,
# only the one in component.wit is used.
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[dependencies]
wit-bindgen = "0.52.0"
regex = "1"
jaq-core = "2"
jaq-std = "2"
jaq-json = "1"
hifijson = "0.2"
serde_json = "1"