[package]
name = "discord_message_listener"
# Note that this version does not matter for the component,
# only the one in component.wit is used.
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
log = "0.4.29"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "asterai:discord-message-listener"

[package.metadata.component.dependencies]
