[package]
name = "llm"
# Note that this version does not matter for the component,
# only the one in component.wit is used.
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
wit-bindgen = "0.52.0"
waki = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
